Bug 152122 - konqueror tabs look bad (screenshot included)
Summary: konqueror tabs look bad (screenshot included)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: tabbing (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-10 18:22 UTC by FiNeX
Modified: 2007-11-15 01:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
tabs problem 1 (62.54 KB, image/png)
2007-11-10 20:36 UTC, FiNeX
Details
tabs problem, example 2 (8.17 KB, image/png)
2007-11-10 20:37 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-11-10 18:22:31 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          onqueror 

Konqueror with multiple tabs draw the tabs shifted down.
Comment 1 FiNeX 2007-11-10 18:27:56 UTC
The "create a new attachment" doesn't let me to attach the 2 screenshots. You can found them here:
http://img162.imageshack.us/img162/3672/konquerortabjf4.png
http://img98.imageshack.us/img98/8523/konquerortab2py8.png
Comment 2 FiNeX 2007-11-10 20:36:48 UTC
Created attachment 22029 [details]
tabs problem 1
Comment 3 FiNeX 2007-11-10 20:37:08 UTC
Created attachment 22030 [details]
tabs problem, example 2
Comment 4 Fredrik Höglund 2007-11-15 00:59:01 UTC
SVN commit 736841 by fredrik:

Fix the broken appearance of the tabs in Konqueror by replacing the tabwidget
style sheet with a proxy widget style that removes the tabwidget frame, but
uses the "real" widget style to draw a tabbar base underneath the tabbar.

This doesn't fully fix the problem with the Oxygen style, because it doesn't
implement PE_FrameTabBarBase.

BUG: 152122


 M  +1 -0      CMakeLists.txt  
 A             konqproxystyle.cpp   [License: GPL (v2+)]
 A             konqproxystyle.h   [License: GPL (v2+)]
 M  +84 -1     konqtabs.cpp  
 M  +2 -0      konqtabs.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=736841
Comment 5 FiNeX 2007-11-15 01:03:04 UTC
Good work! :-)