Fix the broken appearance of the tabs in Konqueror by replacing the tabwidget style sheet with a proxy widget style that removes the tabwidget frame, but uses the "real" widget style to draw a tabbar base underneath the tabbar.

This doesn't fully fix the problem with the Oxygen style, because it doesn't
implement PE_FrameTabBarBase.

BUG: 152122

svn path=/trunk/KDE/kdebase/apps/; revision=736841